<resources>
    <string name="app_name">Travel Journal App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="trip_name">Trip Name:</string>
    <string name="destination">Destination:</string>
    <string name="city_break">City Break</string>
    <string name="sea_side">Sea Side</string>
    <string name="mountains">Mountains</string>
    <string name="trip_type">Trip Type:</string>
    <string name="price_eur">Price (EUR):</string>
    <string name="end_date">End Date:</string>
    <string name="start_date">Start Date:</string>
    <string name="travel_jurnal_app">Travel Jurnal App</string>
    <string name="tripname">TripName</string>
    <string name="price_travel_item">Price: %1$d EUR</string>
    <string name="price">Price:</string>
    <string name="price_500_euro">Price 500 EUR</string>
    <string name="invalid_trip_name">Invalid trip name!</string>
    <string name="invalid_destination_name">Invalid destination name!</string>
    <string name="price_and_euros">\" Euro\"</string>
    <string name="the_ending_date">the ending date</string>
    <string name="the_starting_date">the starting date</string>
    <string name="user_android_com">user@android.com</string>
    <string name="user">User</string>
    <string name="max_temp">Max temp:</string>
    <string name="max">max</string>
    <string name="min">min</string>
    <string name="min_temp">Min temp:</string>
    <string name="weather_description">Weather description</string>
    <string name="weathertype">Weathertype</string>
    <string name="weather">Weather</string>
    <string name="humidity">Humidity:</string>
    <string name="humidity_change">humidity</string>
    <string name="no_data">No Data</string>
    <string name="contact_us">Contact Us</string>
    <string name="stancilaeva_gmail_com">stancilaeva@gmail.com</string>
    <string name="share_travel_journal_app">Share Travel Journal App</string>
    <string name="download_travel_journal_app">Download Travel Journal App</string>


</resources>