<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTripActivity">



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_addTripActivity_tripName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_addTripActivity_tripName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/trip_name"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_addTripActivity_destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/til_addTripActivity_tripName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_addTripActivity_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tiet_addTripActivity_tripName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/destination"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/tv_addTripActivity_tripType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/til_addTripActivity_destination"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/trip_type"
        android:layout_margin="8dp"
        />
    <RadioGroup
        android:id="@+id/rg_addTripActivity_tripType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_addTripActivity_tripType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:weightSum="3"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        >
        <RadioButton
            android:id="@+id/rb_addTripActivity_cityBreak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_break"
            android:layout_weight="1"/>
        <RadioButton
            android:id="@+id/rb_addTripActivity_seaSide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sea_side"
            android:layout_weight="1"/>
        <RadioButton
            android:id="@+id/rb_addTripActivity_mountains"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mountains"
            android:layout_weight="1"/>
    </RadioGroup>
    <TextView
        android:id="@+id/tv_addTripActivity_euro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/rg_addTripActivity_tripType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/price_500_euro"
        android:layout_margin="8dp"
        />
    <SeekBar
        android:id="@+id/s_addTripActivity_euro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_addTripActivity_euro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:min="10"
        android:progress="50"
        android:max="100"

        />
    <!--VEZI CA MAI AI DE PUS DATEPICKERURILE!!!-->
   <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/til_addTripActivity_startDate"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/s_addTripActivity_euro"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_margin="8dp"
    >
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiet_addTripActivity_startDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/s_addTripActivity_euro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/start_date"
        android:inputType="datetime"/>
</com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_addTripActivity_endDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/til_addTripActivity_startDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_addTripActivity_endDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tiet_addTripActivity_startDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="datetime"
            android:hint="@string/end_date"/>
    </com.google.android.material.textfield.TextInputLayout>
    <RatingBar
        android:id="@+id/rb_add_trip_activity_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/b_addTripActivity_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:stepSize="1"
        />
    <Button
        android:id="@+id/b_addTripActivity_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>