<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewTripActivity">
    <TextView
        android:id="@+id/tv_view_trip_activity_trip_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textFontWeight="700"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:text="@string/trip_name"
        android:gravity="center"/>
    <View
        android:id="@+id/v1_view_activity"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/dark_green"
        app:layout_constraintTop_toBottomOf="@+id/tv_view_trip_activity_trip_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"/>
    <LinearLayout
        android:id="@+id/ll_view_trip_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/v1_view_activity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:weightSum="2">
    <TextView
        android:id="@+id/tv_view_trip_activity_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/v1_view_activity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_view_trip_activity_price"
        android:text="@string/destination"
        android:drawableStart="@drawable/ic_baseline_location_on_24"
        android:textSize="16sp"
        android:layout_marginLeft="16dp"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/tv_view_trip_activity_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_view_trip_activity_trip_name"
        app:layout_constraintStart_toEndOf="@+id/tv_view_trip_activity_destination"
        android:text="price"
        android:textSize="16sp"
        android:layout_weight="1"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_view_trip_activity_start_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_view_trip_activity"
        app:layout_constraintEnd_toStartOf="@+id/tv_view_trip_activity_start_date"
        android:text="@string/start_date"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:drawableStart="@drawable/ic_baseline_calendar_today_24"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tv_view_trip_activity_start_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_view_trip_activity"
        app:layout_constraintStart_toEndOf="@+id/tv_view_trip_activity_start_text"
        android:text="@string/the_starting_date"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tv_view_trip_activity_end_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_view_trip_activity_start_text"
        app:layout_constraintEnd_toStartOf="@+id/tv_view_trip_activity_end_date"
        android:text="@string/end_date"
        android:drawableStart="@drawable/ic_baseline_calendar_today_24"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tv_view_trip_activity_end_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_view_trip_activity_start_date"
        app:layout_constraintStart_toEndOf="@+id/tv_view_trip_activity_end_text"
        android:text="@string/the_ending_date"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:textSize="16sp"
        />
    <RatingBar
        android:id="@+id/rb_view_trip_activity_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.RatingBar.Small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_view_trip_activity_end_text"
        android:isIndicator="true"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        />
    <TextView
        android:id="@+id/tv_weather_view_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/rb_view_trip_activity_rating"
        android:text="@string/weather"
        android:textSize="16sp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iw_view_activity_weather_img"
        android:gravity="center"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iw_view_activity_weather_img"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/icons8_sun_48"
        app:layout_constraintStart_toEndOf="@+id/tv_weather_view_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rb_view_trip_activity_rating"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/tv_weather_view_activity_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_weather_view_activity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_weather_view_activity_description"
        android:text="@string/no_data"
        android:textSize="16sp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"/>
    <TextView
        android:id="@+id/tv_weather_view_activity_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_weather_view_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_weather_view_activity_type"
        android:text="@string/no_data"
        android:textSize="16sp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"/>
    <TextView
        android:id="@+id/tv_weather_view_activity_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_weather_view_activity_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_weather_view_activity_change_min"
        android:text="@string/min_temp"
        android:textSize="16sp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"/>
    <TextView
        android:id="@+id/tv_weather_view_activity_change_min"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_weather_view_activity_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_weather_view_activity_min"
        android:text="@string/no_data"
        android:textSize="16sp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"/>
    <TextView
        android:id="@+id/tv_weather_view_activity_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_weather_view_activity_min"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_weather_view_activity_change_max"
        android:text="@string/max_temp"
        android:textSize="16sp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"/>
    <TextView
        android:id="@+id/tv_weather_view_activity_change_max"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_weather_view_activity_change_min"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_weather_view_activity_max"
        android:text="@string/no_data"
        android:textSize="16sp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"/>
    <TextView
        android:id="@+id/tv_weather_view_activity_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_weather_view_activity_max"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_weather_view_activity_change_humidity"
        android:text="@string/humidity"
        android:textSize="16sp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"/>
    <TextView
        android:id="@+id/tv_weather_view_activity_change_humidity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_weather_view_activity_change_max"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_weather_view_activity_humidity"
        android:text="@string/no_data"
        android:textSize="16sp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>