<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_green">

    <ImageView
        android:id="@+id/iv_tripItem_picture"
        android:layout_width="88dp"
        android:layout_height="88dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/pngwing_com"
        />

    <TextView
        android:id="@+id/tv_tripItem_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/iv_tripItem_picture"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_tripItem_destination"
        android:text="@string/tripname"
        />
    <TextView
        android:id="@+id/tv_tripItem_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/tv_tripItem_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/destination"
        />
    <TextView
        android:id="@+id/tv_trip_item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_tripItem_picture"
        app:layout_constraintEnd_toStartOf="@+id/rb_trip_item_rating"
        android:text="@string/price"/>
    <RatingBar
        android:id="@+id/rb_trip_item_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.RatingBar.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_trip_item_price"
        android:isIndicator="true"
        />

</androidx.constraintlayout.widget.ConstraintLayout>